--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Digital Trend HTML Template</title>
+     <title>Unplugged: End Screen &amp; TV Addiction</title>
 <!--
 
 DIGITAL TREND
