--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-12">
                           <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
 
-                            <img src="images/working-girl.png" class="img-fluid" alt="working girl">
+                            <img src="img/unplugged-cover.png" class="img-fluid" alt="Unplugged - Break Free from TV and Screen Addiction">
                           </div>
                         </div>
 
